# mkslide

./: .gitignore  README.md  pyproject.toml
sample/: slide.md
src/mkslide/: __init__.py  __main__.py  build.py  cli.py  postprocess.py  preprocess.py
src/mkslide/data/: preamble-ko.inc.tex
